--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>5.2.2.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
